--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 <body>
   <div></div>
   <div class="card">
-    <img class="main-image" src="./images/image-equilibrium.jpg" alt="image-equilibrium">
 
-    <h1 class="title">Equilibrium #3429</h1>
+    <div class="image-container">
+      <img class="main-image" src="./images/image-equilibrium.jpg" alt="image-equilibrium">
+      <div class="background"></div>
+      <div class="middle">
+        <img src="./images/icon-view.svg">
+      </div>
+    </div>
+
+    <a href="#" class="title">Equilibrium #3429</a>
 
     <p class="description">Our Equilibrium collection promotes balance and calm.</p>
 
@@ -36,12 +43,12 @@
   
     <div class="author">
       <img class="avatar" src="./images/image-avatar.png" alt="avatar">
-      <p><span>Creation of</span> Jules Wyvern</div>
+      <p><span>Creation of</span>&ensp;<a href="#">Jules Wyvern</a></div>
     </div>
 
-  <!--<div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>-->
+    Coded by <a href="github.com/demense">demense</a>.
+  </div>
 </body>
 </html>
