--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="main-image" src="./images/image-equilibrium.jpg" alt="image-equilibrium">
       <div class="background"></div>
       <div class="middle">
-        <img src="./images/icon-view.svg">
+        <img src="./images/icon-view.svg" alt="icon-image">
       </div>
     </div>
 
@@ -26,7 +26,6 @@
     <p class="description">Our Equilibrium collection promotes balance and calm.</p>
 
     <div class="container">
-
       <div class="left-side">
         <img class="currency-icon" src="./images/icon-ethereum.svg" alt="icon-ethereum">
         <p class="currency">0.041 ETH</p>
@@ -36,7 +35,6 @@
         <img class="clock" src="./images/icon-clock.svg" alt="icon-clock">
         <p class="time">3 days left</p>
       </div>
-    
     </div>
 
     <p class="seperator"></p>
